--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cornerstone-tools",
-  "version": "4.0.1",
+  "name": "cornerstone-tools2-drbrain",
+  "version": "5.1.5",
   "description": "Medical imaging tools for the Cornerstone library",
   "main": "./dist/cornerstoneTools.js",
   "keywords": [
@@ -14,7 +14,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/cornerstonejs/cornerstoneTools.git"
+    "url": "git+https://github.com/cornerstonejs/cornerstoneTools.git"
   },
   "engines": {
     "node": ">=8.16.0"
@@ -130,5 +130,12 @@
     "not dead",
     "not IE < 11",
     "not op_mini all"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/cornerstonejs/cornerstoneTools/issues"
+  },
+  "directories": {
+    "doc": "docs",
+    "example": "examples"
+  }
 }
